--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script src="https://code.jquery.com/jquery-3.2.0.min.js"></script>
   <script src="src/thermostat.js"></script>
+  <script src="src/index.js"></script>
 
 </head>
 
-
 <h1>Thermostat</h1>
 
-<h3>Setting: ...</h3>
+<h3 id="currentTemperature"/>
 
 <h3>Energy Usage Level: ...</h3>
 
 <form>
-  <input type="text" name="up">
-  <input type="submit" value="Up">
+  <input id="raiseTemp" type="button" value="Turn it up!">
 </form>
 
 <form>
-  <input type="text" name="down">
-  <input type="submit" name="Down">
+  <input id="lowerTemp" type="button" value="Turn it down!">
 </form>
+<br/>
 
 <form>
-  <input type="radio" name="power-saving" value="on"> Power Saving On <br>
-  <input type="radio" name="power-saving" value="off"> Power Saving Off <br>
+  <input id="powerSave" type="radio" name="power-saving" value="on"> Power Saving On <br>
+  <input id="powerSpend" type="radio" name="power-saving" value="off"> Power Saving Off <br>
 </form>
 
-<button name="reset">Reset</button>
+<button id="reset" name="reset">Reset Temperature</button>
 
 </html>
