--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <script src="https://code.jquery.com/jquery-3.2.0.min.js"></script>
   <script src="src/thermostat.js"></script>
   <script src="src/index.js"></script>
+  <link href="src/style.css" rel="stylesheet" type="text/css"/>
 
 </head>
 
@@ -11,7 +12,7 @@
 
 <h3 id="currentTemperature"/>
 
-<h3>Energy Usage Level: ...</h3>
+<h3 id="energyUsage"> </h3>
 
 <form>
   <input id="raiseTemp" type="button" value="Turn it up!">
